added logistic regression classifier

--- a/code/classifier.ipynb
+++ b/code/classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,18 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "DX = pickle.load(open(\"data/DX.p\", \"rb\"))\n",
-    "DY = pickle.load(open(\"data/DY.p\", \"rb\"))\n",
-    "DZ = pickle.load(open(\"data/DZ.p\", \"rb\"))"
+    "DX = pickle.load(open(\"/Users/ethanknutson/Documents/Seguard-dev/seguard-resources/data/DX.p\", \"rb\"))\n",
+    "DY = pickle.load(open(\"/Users/ethanknutson/Documents/Seguard-dev/seguard-resources/data/DY.p\", \"rb\"))\n",
+    "DZ = pickle.load(open(\"/Users/ethanknutson/Documents/Seguard-dev/seguard-resources/data/DZ.p\", \"rb\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/LucyWang/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_split.py:652: Warning: The least populated class in y has only 5 members, which is too few. The minimum number of members in any class cannot be less than n_splits=10.\n",
+      "/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_split.py:652: Warning: The least populated class in y has only 5 members, which is too few. The minimum number of members in any class cannot be less than n_splits=10.\n",
       "  % (min_groups, self.n_splits)), Warning)\n"
      ]
     }
@@ -67,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/LucyWang/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_split.py:652: Warning: The least populated class in y has only 5 members, which is too few. The minimum number of members in any class cannot be less than n_splits=10.\n",
+      "/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_split.py:652: Warning: The least populated class in y has only 5 members, which is too few. The minimum number of members in any class cannot be less than n_splits=10.\n",
       "  % (min_groups, self.n_splits)), Warning)\n"
      ]
     }
@@ -99,22 +101,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/LucyWang/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_split.py:652: Warning: The least populated class in y has only 5 members, which is too few. The minimum number of members in any class cannot be less than n_splits=10.\n",
+      "/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_split.py:652: Warning: The least populated class in y has only 5 members, which is too few. The minimum number of members in any class cannot be less than n_splits=10.\n",
       "  % (min_groups, self.n_splits)), Warning)\n",
-      "/Users/LucyWang/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_split.py:652: Warning: The least populated class in y has only 5 members, which is too few. The minimum number of members in any class cannot be less than n_splits=10.\n",
+      "/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_split.py:652: Warning: The least populated class in y has only 5 members, which is too few. The minimum number of members in any class cannot be less than n_splits=10.\n",
       "  % (min_groups, self.n_splits)), Warning)\n",
-      "/Users/LucyWang/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_split.py:652: Warning: The least populated class in y has only 5 members, which is too few. The minimum number of members in any class cannot be less than n_splits=10.\n",
+      "/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_split.py:652: Warning: The least populated class in y has only 5 members, which is too few. The minimum number of members in any class cannot be less than n_splits=10.\n",
       "  % (min_groups, self.n_splits)), Warning)\n",
-      "/Users/LucyWang/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_split.py:652: Warning: The least populated class in y has only 5 members, which is too few. The minimum number of members in any class cannot be less than n_splits=10.\n",
+      "/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_split.py:652: Warning: The least populated class in y has only 5 members, which is too few. The minimum number of members in any class cannot be less than n_splits=10.\n",
       "  % (min_groups, self.n_splits)), Warning)\n",
-      "/Users/LucyWang/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_split.py:652: Warning: The least populated class in y has only 5 members, which is too few. The minimum number of members in any class cannot be less than n_splits=10.\n",
+      "/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_split.py:652: Warning: The least populated class in y has only 5 members, which is too few. The minimum number of members in any class cannot be less than n_splits=10.\n",
       "  % (min_groups, self.n_splits)), Warning)\n"
      ]
     },
@@ -147,7 +149,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_split.py:652: Warning: The least populated class in y has only 5 members, which is too few. The minimum number of members in any class cannot be less than n_splits=10.\n",
+      "  % (min_groups, self.n_splits)), Warning)\n",
+      "/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:460: FutureWarning: Default multi_class will be changed to 'auto' in 0.22. Specify the multi_class option to silence this warning.\n",
+      "  \"this warning.\", FutureWarning)\n",
+      "/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:460: FutureWarning: Default multi_class will be changed to 'auto' in 0.22. Specify the multi_class option to silence this warning.\n",
+      "  \"this warning.\", FutureWarning)\n",
+      "/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:460: FutureWarning: Default multi_class will be changed to 'auto' in 0.22. Specify the multi_class option to silence this warning.\n",
+      "  \"this warning.\", FutureWarning)\n",
+      "/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:460: FutureWarning: Default multi_class will be changed to 'auto' in 0.22. Specify the multi_class option to silence this warning.\n",
+      "  \"this warning.\", FutureWarning)\n",
+      "/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:460: FutureWarning: Default multi_class will be changed to 'auto' in 0.22. Specify the multi_class option to silence this warning.\n",
+      "  \"this warning.\", FutureWarning)\n",
+      "/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:460: FutureWarning: Default multi_class will be changed to 'auto' in 0.22. Specify the multi_class option to silence this warning.\n",
+      "  \"this warning.\", FutureWarning)\n",
+      "/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:460: FutureWarning: Default multi_class will be changed to 'auto' in 0.22. Specify the multi_class option to silence this warning.\n",
+      "  \"this warning.\", FutureWarning)\n",
+      "/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:460: FutureWarning: Default multi_class will be changed to 'auto' in 0.22. Specify the multi_class option to silence this warning.\n",
+      "  \"this warning.\", FutureWarning)\n",
+      "/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:460: FutureWarning: Default multi_class will be changed to 'auto' in 0.22. Specify the multi_class option to silence this warning.\n",
+      "  \"this warning.\", FutureWarning)\n",
+      "/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:460: FutureWarning: Default multi_class will be changed to 'auto' in 0.22. Specify the multi_class option to silence this warning.\n",
+      "  \"this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Random Forest': [0.8554621848739495, 0.9159663865546218], 'SVC': [0.5142857142857142, 0.8285714285714286], '3 Neighbor': [0.7563025210084033, 0.8689075630252101], '5 Neighbor': [0.7378151260504202, 0.8588235294117647], '10 Neighbor': [0.7109243697478992, 0.8453781512605042], '15 Neighbor': [0.6638655462184874, 0.8420168067226891], '20 Neighbor': [0.6420168067226891, 0.8453781512605042], 'LogReg': [0.8638655462184874, 0.9327731092436975]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "temp = []\n",
+    "\n",
+    "clf = LogisticRegression(solver='lbfgs')\n",
+    "y_pred = cross_val_predict(clf, DX, DY, cv = 10)\n",
+    "temp.append(accuracy_score(DY, y_pred))\n",
+    "\n",
+    "z_pred = cross_val_predict(clf, DX, DZ, cv=10)\n",
+    "temp.append(accuracy_score(DZ, z_pred))\n",
+    "result.update({'LogReg': temp})\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {
     "scrolled": true
    },
@@ -180,6 +238,7 @@
        "      <th>10 Neighbor</th>\n",
        "      <th>15 Neighbor</th>\n",
        "      <th>20 Neighbor</th>\n",
+       "      <th>LogReg</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -192,6 +251,7 @@
        "      <td>0.710924</td>\n",
        "      <td>0.663866</td>\n",
        "      <td>0.642017</td>\n",
+       "      <td>0.863866</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>z</th>\n",
@@ -202,6 +262,7 @@
        "      <td>0.845378</td>\n",
        "      <td>0.842017</td>\n",
        "      <td>0.845378</td>\n",
+       "      <td>0.932773</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -212,12 +273,12 @@
        "y       0.855462  0.514286    0.756303    0.737815     0.710924     0.663866   \n",
        "z       0.915966  0.828571    0.868908    0.858824     0.845378     0.842017   \n",
        "\n",
-       "   20 Neighbor  \n",
-       "y     0.642017  \n",
-       "z     0.845378  "
+       "   20 Neighbor    LogReg  \n",
+       "y     0.642017  0.863866  \n",
+       "z     0.845378  0.932773  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
